refactor: improve agent context and evaluation workflow